# CM2290-Trafficsign-Detection

./: README.md
doc/: CM2290-Trafficsign-Detection-demo-doc.docx  Video_description.txt
trafficsign/: CMakeLists.txt  trafficsign_0.1.bb
trafficsign/examples/: CMakeLists.txt  gst_yolov5_test.cpp  labels.txt
trafficsign/gst_component/: CMakeLists.txt  appsrc2udpsink.cpp  appsrc_pipe.hpp  appsrc_test.cpp  camera2appsink.cpp  camera_pipe.hpp  camera_test.cpp
trafficsign/inference/: CMakeLists.txt  yolov5_tflite.cpp  yolov5_tflite.hpp  yolov5_tflite_test.cpp
